checkdown 0.0.3 (20.03.2020)
  - add "random_answer_order" argument to "check_question()"
  - add type "checkbox" to "autocheck_question()" function.

checkdown 0.0.2 (18.03.2020)
  - add random value in question_id, so it is possible not to specify it all the time.
  - add type "radio" to "autocheck_question()" function.
  - add possibility to have multiple answers
  - add argument "button_label" that controls the value that will be displayed on the button
  - change alert() to just <p></p>, so user do not need to close alert window
  - rename "autocheck_question()" to "check_question()"
  - add the "check_hint()" function
  - add markdown conversion inside of all messages

checkdown 0.0.1 (02.03.2020)
  - initial release.